--- a/css/sass/account.scss
+++ b/css/sass/account.scss
@@ -1081,6 +1081,63 @@ body {
     }
 }
 
+/* 弹出层 */
+
+.mask_layer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    &_bg {
+        background: #000;
+        opacity: .5;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.popup {
+    opacity:0;
+    width: 230px;
+    margin: 30% auto;
+    background: #fff;
+    @include border-radius(5px);
+    @include box-shadow(0px 0px 5px #666);
+    @include transition(all .5s);
+    position: relative;
+    &.active{
+        margin-top:40%;
+        opacity:1;
+        @include transition(all .5s);
+    }
+    &_cnt {
+        width: 230px;
+        display:none;
+        padding: 14px;
+        @include box-sizing(border-box);
+        p {
+            margin: 0 6px;
+            text-align: justify;
+            color: $font_red;
+            font-size: .9em;
+        }
+        @at-root .id_img{
+            width:84%;
+            margin:12px auto;
+            text-align: center;
+        }
+        .pure-button {
+            font-size: .95em;
+            margin: 0 auto;
+        }
+    }
+}
 
 /* triangle */
 
@@ -1103,5 +1160,15 @@ body {
     &.rotate {
         @include transition(all .5s);
         @include transform(rotateZ(-180deg));
+    }
+}
+
+
+@media only screen and (orientation: landscape) {
+    .popup {
+        margin: 0% auto;
+        &.active{
+            margin-top: 2%;
+        }
     }
 }
